--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,7 @@ dependencies {
 
     // Material Design
     implementation "com.google.android.material:material:$version_material"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
     // TODO (01) Add the dependencies for navigation fragment ktx and navigation UI ktx
 }
